@@ -1,6 +1,7 @@
 package com.example.board.controller;
 
 import com.example.board.dto.ArticleReqDto;
+import com.example.board.dto.ArticleResDto;
 import com.example.board.model.Article;
 import com.example.board.service.ArticleService;
 import lombok.AllArgsConstructor;
@@ -14,7 +15,6 @@ import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestMapping;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Controller
 @AllArgsConstructor
@@ -27,30 +27,34 @@ public class ArticleController {
     public String getArticle(Model model) {
         List<Article> article = articleService.getArticle();
 
-        article.stream().forEach(a -> {
-            System.out.println(a.toString());
-        });
-
         ModelMapper modelMapper = new ModelMapper();
-        // TODO: 2024-09-05 ArticleResDto 만들고 변환해서 넘기기
 
-//        List<ArticleReqDto.Notice> notices = article.stream()
-//                        .map(notice -> modelMapper.map(notice, ArticleReqDto.Notice.class))
-//                        .collect(Collectors.toList());
+        List<ArticleResDto.NoticeList> notices = article.stream().map(notice -> modelMapper
+                        .map(notice, ArticleResDto.NoticeList.class))
+                        .toList();
 
-        model.addAttribute("articles", article);
+        model.addAttribute("articles", notices);
         return "view/notice";
     }
 
     @GetMapping("/notice/new")
     public String createNotice() {
         // TODO: 2024-09-05 boardType, boardName 리스트 넘겨서 selectBox 배치
+        /**
+         * 레이아웃에 게시판 리스트 정보를 로그인시 세션과 연결지어 해결 가능한지
+         */
         return "view/noticeCreate";
     }
     @PostMapping("/notice/create")
-    public ResponseEntity<?> createNotice(ArticleReqDto.Notice reqArticle) {
+    public ResponseEntity<?> createNotice(ArticleReqDto.NoticePost requst) {
         // TODO: 2024-09-05 Article로 변환 후 insert
-        log.info("article request => {}", reqArticle.toString());
+        /**
+         * 게시글 등록할때의 사용자 정보를 매변 dto에 담아오기보다는 로그인시 세션으로 인스턴스화?해서
+         * 로그인 정보는 바로 가져오자
+         * id, name
+         */
+        log.info("article request => {}", requst.toString());
+
 
         return ResponseEntity.ok(null   );
     }
